shellSelectorView: fix missing border-left

--- a/less/acorn-player.less
+++ b/less/acorn-player.less
@@ -396,10 +396,6 @@ input {
     }
   }
 
-  .grid-tile-view:first-child {
-    border-left: 0px;
-  }
-
   .grid-tile-view:hover {
     background: rgba(0, 0, 0, 0.1);
     a, a:hover {
